# cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: mod.rs  status.rs  system.rs
src/commands/pipeline/: mod.rs
src/commands/project/: mod.rs
src/commands/team/: mod.rs
src/commands/user/: login.rs  logout.rs  mod.rs  status.rs  user.rs
src/utils/: mod.rs
src/utils/app/: auth.rs  init.rs  mod.rs
src/utils/fs/: archive.rs  filesystem.rs  mod.rs
src/utils/net/: dl_unzip.rs  download.rs  mod.rs
tests/: integration_test.rs
