[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
zip = "0.6"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
chrono = "0.4"
indicatif = "0.17"
futures-util = "0.3"
