[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ag"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
zip = "0.6"
tokio = { version = "1.40", features = ["full"] }
tempfile = "3.0"
chrono = "0.4"
indicatif = "0.17"
futures-util = "0.3"
open = "5.3.2"
axum = { version = "0.8.6", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = {version = "10.2.0", features = ["aws_lc_rs"] }
thiserror = "2.0.17"
